fixed z-index

--- a/sass/main.css
+++ b/sass/main.css
@@ -79,6 +79,7 @@ body {
   top: 100%;
   border-radius: 4px;
   margin-top: 3px;
+  z-index: 101;
 }
 
 .dropdown-menu__item {
